--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ learnNode/node_modules
 learnNode/*.log
 Stream-Adventure/node_modules
 Stream-Adventure/*.log
+pumpNotificationService/node_modules
+pumpNotificationService/.idea
